# Cogito

./: .gitignore  README.md
backend/: deepcite_os.db  package-lock.json  pyproject.toml
backend/app/: auth.py  db.py  main.py
backend/app/agents/: critic.py  librarian.py  router.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/account/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/project/[id]/: page.tsx
frontend/src/components/domain/: ChatSidebar.tsx  Workspace.tsx
frontend/src/context/: AuthContext.tsx
