[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.1",
    "ddgs>=9.10.0",
    "fastapi>=0.133.0",
    "litellm>=1.81.15",
    "pydantic-ai-slim[duckduckgo]>=1.63.0",
    "pydantic-ai[duckduckgo]>=1.63.0",
    "pypdf>=6.7.3",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "sqlmodel>=0.0.37",
    "sse-starlette>=3.2.0",
    "uvicorn>=0.41.0",
]
